# termisql

./: Cargo.toml  LICENSE  README.md
src/: app.rs  args.rs  db.rs  layout.rs  main.rs
src/widgets/: mod.rs  table_list.rs  table_page.rs  table_view.rs
